# hs-jpg2exif

./: CHANGELOG.md  Dockerfile  Dockerfile.wasi.txt  README.md  build-img.sh  example.sh  extract-wasi.sh  hs-jpg2exif.cabal  opt.sh
app/: Main.hs
src/: JpgToExif.hs
