cabal-version:      3.14
name:               hs-jpg2exif
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             yanagitani
maintainer:         takanori.yanagitani@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror

executable hs-jpg2exif
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.17 && < 4.23,
        hs-jpg2exif,
    hs-source-dirs:   app
    default-language: GHC2021

library
    import:           warnings
    exposed-modules:  JpgToExif
    build-depends:
        base >= 4.17 && < 4.23,
        bytestring >= 0.10 && < 0.13,
        containers >= 0.6 && < 0.8,
        hsexif >= 0.6 && < 0.8,
        aeson >= 2.0 && < 2.30,
    hs-source-dirs:   src
    default-language: GHC2021
